--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ asgiref==3.2.3
 Django==3.0.2
 djangorestframework==3.11.0
 psycopg2==2.8.4
+Pygments==2.5.2
 pytz==2019.3
+redgreenunittest==0.1.1
 sqlparse==0.3.0
