User Model tests and Update Test Runner
- Create test for User Model
- Remove redudant 'null=False' from database column definitions
- Remove 'code' from ValidationErrors
- Change redgreen test runner to django-nose

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - checkout
       - run: pip install -r requirements.txt
-      - run: python manage.py test -d --no-input api_v1/tests/
+      - run: python manage.py test -d --noinput api_v1/tests/
