FEAT: Match CRUD
- Change to PostGis
- Add LocationRange and MatchStatus filter
- Create Location Field to Match Serializer
- Add wait-for script for api container wait for db begins to listen on 5432 TCP port
- Change the test directory structure (organize by feature)
- Add validation utils lib
- Remove unnecessary overriding handle_exception method in view classes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,13 @@
 version: 2.1
 jobs:
-  build:
+  test:
     docker: 
       - image: igorxp5/applada-api:latest
         name: applada-api
         auth:
           username: igorxp5
           password: $DOCKERHUB_PASSWORD
-      - image: postgres
+      - image: kartoza/postgis
         name: applada-db
         environment:
           POSTGRES_DB: applada
@@ -16,4 +16,10 @@ jobs:
     steps:
       - checkout
       - run: pip install -r requirements.txt
-      - run: python manage.py test -d --noinput api_v1/tests/
+      - run: /bin/wait-for applada-db:5432
+      - run: python manage.py test -d --noinput api_v1/tests/*
+workflows:
+  version: 2
+  workflow:
+    jobs:
+      - test
