--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.3
 colorama==0.4.3
 Django==3.0.2
+django-filter==2.2.0
 django-nose==1.4.6
 djangorestframework==3.11.0
 djangorestframework-simplejwt==4.4.0
