--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,8 @@ jobs:
       IMAGE_NAME: igorxp5/applada-api
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Build Docker image
           command: docker build -t $IMAGE_NAME:latest .
