--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: 'Getting current release name'
           command: |
-            if [ "CIRCLE_BRANCH" = "master" ]; then
+            if [ "$CIRCLE_BRANCH" = "master" ]; then
               CURRENT_RELEASE_NAME="release"
             else
               CURRENT_RELEASE_NAME="debug"
@@ -62,7 +62,9 @@ jobs:
       - run:
           name: 'Building next name version'
           command: |
-            if [ "$COMMIT_TYPE" = "FEAT" ]; then
+            if [ "$CURRENT_RELEASE_NAME" = "release" ]; then
+              NEXT_NAME_VERSION="$CURRENT_VERSION"
+            elif [ "$COMMIT_TYPE" = "FEAT" ]; then
               NEXT_NAME_VERSION=$(semver bump minor $CURRENT_VERSION)
             else
               NEXT_NAME_VERSION=$(semver bump patch $CURRENT_VERSION)
@@ -102,8 +104,6 @@ jobs:
   build-api-docker-image:
     docker:
       - image: circleci/buildpack-deps:stretch
-    environment:
-      IMAGE_NAME: $RELEASE_DOCKER_IMAGE
     steps:
       - checkout
       - run:
@@ -115,11 +115,9 @@ jobs:
       - setup_remote_docker
       - run:
           name: Build Docker image
-          command: docker build -t $IMAGE_NAME:latest -t $IMAGE_NAME:$CURRENT_VERSION .
+          command: docker build -t "$RELEASE_DOCKER_IMAGE:latest" -t "$RELEASE_DOCKER_IMAGE:$CURRENT_VERSION" .
 
   publish-api-image-in-docker-hub:
-    environment:
-      IMAGE_NAME: $RELEASE_DOCKER_IMAGE
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
@@ -134,9 +132,9 @@ jobs:
       - run:
           name: Publish Docker Image to Docker Hub
           command: |
-            echo "$DOCKERHUB_PASS" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:$CURRENT_VERSION
+            echo "$DOCKERHUB_PASSWORD" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
+            docker push $RELEASE_DOCKER_IMAGE:latest
+            docker push $RELEASE_DOCKER_IMAGE:$CURRENT_VERSION
   
   update-applada-api-repository:
     docker:
