--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,14 @@ services:
     ports:
       - 80:80
       - 8080:8080
+      - 443:443
     networks:
       - frontend
       - backend
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./traefik.toml:/traefik.toml
+      - ./certs/:/certs/
     restart: on-failure
 
   applada-db:
